# KG-2021-196068

./: .gitignore  CMakeLists.txt
lab01_196068/: CMakeLists.txt  lab01.cpp
lab02_196068/: CMakeLists.txt  lab2-cvet.cpp  lab2-kruznica.cpp  lab2-mitsubishi.cpp  lab2-radioactive.cpp
lab03_196068/: CMakeLists.txt  lab3-color-wheel.cpp  lab3-gradient.cpp  lab3-logo.cpp  logo_vertex.glsl  wheel_fragment.glsl  wheel_vertex.glsl
lab04_196068/: CMakeLists.txt  resource.cpp  resource.h  texture1.cpp  texture2.cpp
lab05_196068/: CMakeLists.txt  pacman.cpp  resource.cpp
lab06_196068/: CMakeLists.txt  cube.cpp  logo.cpp  pacman.cpp  sphere.cpp
lab07_196068/: CMakeLists.txt  camera.cpp  resource.h
